[package]
name = "bevy_goap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy.git" }
bevy-inspector-egui = { version = "0.15.0", optional = true }
pathfinding = "4.1.1"

[dev-dependencies]
bevy = { git = "https://github.com/bevyengine/bevy.git" }
rstest = "0.18"

[features]
inspector = ["dep:bevy-inspector-egui"]

[[example]]
name = "lumberjack"
path = "examples/lumberjack/src/main.rs"
